======================================
Changes for Crate Data Admin Interface
======================================

2014/04/07 0.4.1
================

 - fixed Angular version

2014/04/07 0.4.0
================

 - ported from Backbone to Angular

2014/03/21 0.3.1
================

 - show correct cluster status immediately after starting the admin

 - compute correct numbers of missing primary shards and unassigned shards

2014/03/17 0.3.0
================

 - use sql to query clustername and nodes load

2014/03/13 0.2.9
================

 - removed note about yellow warning state in "get started"

2014/03/13 0.2.8
================

 - use '0-all' replicas in the twitter getting started tutorial

2014/03/13 0.2.7
================

 - Changed docs link to open in the same frame.

2014/03/11 0.2.6
================

 - Fix Safari font rendering

2014/03/11 0.2.5
================

 - Changed query to fetch table information. Group by wasn't necessary and sum
   on number_of_replicas won't work in the next crate version as it is changed
   to a string.

2014/03/07 0.2.4
================

 - Fix FF bug related to mixed-content on the tutorial view.

 - Do not abort table info fetching when a node goes down and /_sql does not respond.

2014/03/06 0.2.3
================

 - Remove obsolete code and refactor ClusterStatus, Overview.

2014/03/04 0.2.2
================

 - Filter system tables differently.

2014/03/04 0.2.1
================

 - Fix display issues

2014/03/04 0.2.0
================

 - Add a "Get started" section that imports tweets

 - Fix table ordering

2014/03/04 0.1.2
================

 - Insert new TableInfoView items in alphabetic order

2014/02/27 0.1.1
================

 - Fix TableInfoView when a displayed table is removed. Show/hide properly
   "No tables available" when a table is removed

2014/02/27 0.1.0
================

 - Handle edge case where there are no tables in overview, table view

 - Fix load graph to behave with bootstrap/jQuery
