@@ -2,6 +2,11 @@
 Changes for Crate Data Admin Interface
 ======================================
 
+Unreleased
+==========
+
+ - fix: default base_uri is current location
+
 2014/04/07 0.4.1
 ================
 
